--- a/Magazine-child/style.css
+++ b/Magazine-child/style.css
@@ -31,6 +31,10 @@ CSS Document
 	yellow: 			#ffce00
 	tan:				#e8d9b5
 */
+.home .featured-post {
+	margin-bottom:1.25em;
+	padding-right: 1.25rem;
+}
 
 .home .features-box img.flag {	
 	margin: -10px -18px 0 0;
@@ -43,4 +47,20 @@ CSS Document
 
 .home .panel.features-box h1.features-headline {
 	margin-top:-1.2em;
+}
+
+.home .panel.features-box a:link {color: #fff;}
+.home .panel.features-box a:visited {color: #fff;}
+.home .panel.features-box a:hover {color: #003d71; text-decoration: underline;}
+.home .panel.features-box a:active {color: #003d71;}
+
+.home h3.blog-info {margin-bottom: 1em;}
+
+/* Awards Page */
+.postid-49 li[class*='counter-'] ul, .postid-49 li[class^='counter-'] ul {
+	margin-bottom:1.8em;
+}
+
+.postid-49 p {
+	margin-bottom: 0.3em;
 }
